# app/models/concerns/category_validator.rb
@@ -1,0 +1,9 @@
+class CategoryValidator < ActiveModel::Validator
+  
+  def validate(record)
+    if record.category?
+      raise Error::UnknownCategort unless ["Beginner", "C", "С+", "B", "A"].include?(record.category)
+  	end
+  end
+	
+end
